docs/데이터파트/version3.7/직접수집_가이드_업종분류현황.md
# 직접 수집 가이드 — KRX 업종분류 현황 (KOSPI 18개 · 선택 KOSDAQ 18개 · 연 1회 스냅샷)

> 2026-09-03 작성 · **2026-09-06 v3.7 개정: KOSDAQ 절(§8) 추가** — 받는 것은 여전히 선택이고,
> 받기 전에 코드가 KOSDAQ 파일을 어떻게 다루는지 시험 7건으로 실측해 두었다
> (`tests/test_sector_kosdaq.py`). 팀장이 브라우저로 클릭해 내려받는 절차다.
> **왜 손으로 받나** — KRX Data Marketplace 홈페이지 이용약관(시행 2026-08-29)
> **제10조 ② "자동화 수단을 이용하여 정보를 무단 수집·복제·배포하는 행위"** 가 금지라
> 코드로 받지 않는다. 사람이 화면에서 받는 것은 약관이 의도한 사용이다.
> **제12조 ②** 사전 허락 없는 복제·배포 금지 — 받은 파일은 `data/manual/` 에만 두고
> **HuggingFace 에 올리지 않는다.** 팀원에게는 "받는 방법"(이 문서)만 공유한다.

---

## 0. 한 줄 요약

`data.krx.co.kr` 로그인 → **통계 > 기본 통계 > 주식 > 세부안내 > 업종분류 현황** →
시장 **KOSPI** · 조회일자를 아래 표의 날짜로 → **조회** → 다운로드 아이콘 → **CSV** →
`data/manual/sector/` 에 저장. 18번 반복. **KOSDAQ 도 받기로 했으면 시장만 바꿔 같은 18개
날짜로 18번 더** (§8).

---

## 1. 준비

| 항목 | 내용 |
|---|---|
| 사이트 | https://data.krx.co.kr |
| 로그인 | **필수** (2025-12-27부터). 네이버·카카오 간편가입 가능. `.env` 의 `KRX_ID` 계정 |
| 저장 폴더 | `data/manual/sector/` — 없으면 만든다 (`.gitignore` 대상, 저장소에 안 올라간다) |
| 브라우저 | 아무거나. **엑셀은 열지 않는다** (아래 4절) |

---

## 2. 화면 경로

1. 상단 메뉴 **[통계]** → **[기본 통계]**
2. 왼쪽 트리 **[주식]** → **[세부안내]** → **[업종분류 현황]**
   - 못 찾으면 상단 **화면검색**에 `업종분류` 를 치면 바로 나온다.
3. 조회 조건
   - **시장구분**: `KOSPI` (유가증권) 로 고른다. KOSDAQ 은 **선택**이다 — 받기로 했으면 §8 대로
     같은 날짜에 시장만 바꿔 한 번 더 받는다. KONEX 는 받지 않는다(유니버스 밖 · #92).
   - **조회일자**: 아래 3절의 날짜를 하나 넣는다.
4. **[조회]** 를 누른다. 표가 바뀐 것을 눈으로 확인한다.
   - 🔴 **날짜를 바꾸고 [조회]를 안 누르면 이전 날짜 표가 그대로 내려받힌다.**
     판별기가 잡아 내긴 하지만 헛걸음이다.
5. 표 오른쪽 위 **다운로드 아이콘(⬇)** → **CSV** 를 고른다.
   - Excel(xlsx) 말고 **CSV** 다. 우리 판별기가 CSV 를 읽는다.
6. 내려받은 파일을 `data/manual/sector/` 로 옮긴다.

> ⚠️ 화면 요소 이름(버튼·라벨)은 헤드리스 브라우저가 403 으로 막혀 직접 찍지 못했다.
> 실제 화면과 표기가 조금 다를 수 있다. 경로(통계>기본통계>주식>세부안내>업종분류 현황)는
> 사이트 전체 메뉴에서 확인한 것이다.

---

## 3. 받을 날짜 18개 — 🔴 거래일 달력에서 뽑았다 (짐작 아님)

매년 **첫 거래일** 17개 + **2024-07-01** (KRX 업종 체계 개편일 · `IT 서비스`·`부동산`·
`오락·문화` 지수가 이날 처음 생긴다) 1개.

| # | 조회일자 | 비고 |
|--:|---|---|
| 1 | **2010-01-04** | 우리 자료 첫날 |
| 2 | 2011-01-03 | |
| 3 | 2012-01-02 | |
| 4 | 2013-01-02 | |
| 5 | 2014-01-02 | |
| 6 | 2015-01-02 | |
| 7 | 2016-01-04 | |
| 8 | 2017-01-02 | |
| 9 | 2018-01-02 | |
| 10 | 2019-01-02 | |
| 11 | 2020-01-02 | |
| 12 | 2021-01-04 | |
| 13 | 2022-01-03 | |
| 14 | 2023-01-02 | |
| 15 | 2024-01-02 | 개편 전 마지막 연초 |
| 16 | **2024-07-01** | 🔴 **지수 신설일** — `IT 서비스`·`부동산`·`오락·문화` **지수**가 이날 생겼다. ⚠️ 실측(2026-09-03): 이날 스냅샷의 **종목 분류는 아직 옛 체계**였다(광업만 사라져 23종). 새 업종이 종목에 붙은 것은 2025-01-02 스냅샷부터다. 바뀐 날은 그 사이 어딘가 — 좁히려면 2024-10-01 쯤 한 장 더 받는다 |
| 17 | 2025-01-02 | |
| 18 | 2026-01-02 | |

> 1월 1일·주말이 겹쳐 연도마다 첫 거래일이 다르다. `trading_calendar` 에서
> `MIN(bas_dd) GROUP BY 연도` 로 뽑은 값이다. 다른 날을 넣어도 판별기는 통과시키지만
> (그날 종가로 역추적한다) 간격이 고르지 않게 된다.

**기대 행 수 (API 실측, 참고용)**: 2010-01-04 약 925행 · 2020-01-02 약 916행 ·
2026-09-01 약 943행. 700행 미만이거나 1,200행 초과면 시장구분을 잘못 골랐을 가능성이 크다.

---

## 4. 하지 말 것

| 하지 말 것 | 왜 |
|---|---|
| **엑셀로 열어 저장** | 종목코드 `005930` 이 숫자 `5930` 으로 바뀐다. 판별기가 격리한다 |
| 파일 내용 수정 | 무엇이 어떻게 바뀌었는지 기록이 사라진다. 원본은 원본대로 |
| 스크립트로 반복 호출 | 약관 제10조 ② 위반. pykrx 로그인 경로도 같다 |
| HF·깃허브에 올리기 | 약관 제12조 ② 위반. 저장소는 Public 이다 |
| KOSDAQ 을 **다른 날짜**로 받기 | 같은 폴더에 섞는 것은 된다(판별기가 종가로 시장을 가른다 · §8). 다만 **KOSPI 와 같은 18개 날짜**여야 한다 — `industry_as_of` 가 "가장 최근 스냅샷 하나" 를 통째로 주므로 날짜가 어긋나면 한 시장이 통째로 빠진다 (`tests/test_sector_kosdaq.py`) |

---

## 5. 파일 이름 — 바꾸지 않아도 된다

KRX 는 `data_2708_20260903.csv` 처럼 **일련번호 + 내려받은 날** 로 이름을 붙인다.
🔴 **뒤의 날짜는 조회일이 아니라 다운로드한 날이다.** 2015-01-02 를 조회해 오늘 받으면
`20260903` 이 붙는다. 그래서 파일명을 믿지 않는다 — 판별기가 **종가 20종을 `daily_price`
와 맞춰 기준일을 역추적**한다. 정확히 하루만 맞아야 통과, 아니면 격리.

사람이 보기 좋게 하려면 `업종분류현황_KOSPI_20150102.csv` 처럼 붙여도 된다. 다만
그 이름도 참고일 뿐, 판정은 내용으로 한다.

---

## 6. 받은 뒤

```bash
python scripts/normalize_manual.py --dry-run     # 무엇으로 판정했는지 먼저 본다
python scripts/normalize_manual.py               # normalized/sector/ 에 변환본 생성
python scripts/ingest_manual.py --kind sector    # 반입 엔진 → inbox_accepted
```

판정 출력에서 볼 것
- 파일마다 **역추적된 기준일** 이 3절의 날짜와 같은가
- **행 수** 가 기대 범위인가
- `python scripts/verify_sector.py` — 🔴 **종가·시가총액 전량 대조**(행 수가 아니라 값).
  실측 2026-09-03: 18장 16,650행 전부 `daily_price` 와 일치, 격리 0

---

## 7. 이 자료가 어디로 가나

```
data/manual/sector/*.csv
  → normalize_manual.py (cp949 → utf-8 · 기준일 역추적)
  → ingest/inbox (규격 sector.json · 격리/통과)
  → inbox_accepted (kind='sector')
  → supply/sector.py  sector_as_of(bas_dd)  ← "그날 이전 가장 최근 스냅샷"
  → scripts/export_team_dataset.py  daily_price_dev.parquet 에 industry 칸
```

`sector` 칸(소속부)은 그대로 두고 **`industry` 칸을 새로 붙인다.** 한 칸에 두 뜻을 섞지
않기 위해서다. `known_at` 은 다음 거래일 — `stock_base_info` 와 같은 규칙.

`index_price` 업종지수와 붙일 때 이름이 어긋나는 셋만 정규화한다
(2010·2020·2026 세 시점 실측 · 나머지 21개는 그대로 조인):

| 업종분류 현황 | index_price 지수명 |
|---|---|
| `은행` · `기타금융` | `금융` (상위 묶음 — 자기 지수가 없는 둘만) |
| `전기·전자` | `전기전자` (가운뎃점) |
| `기타제조` | `제조` (상위 묶음) |
| `보험` · `증권` | 그대로 — 자기 지수가 있다. 🔴 처음에 `금융` 으로 올렸다가 보험 지수에 종목 0 이 돼 되돌렸다 |
| `농업, 임업 및 어업` · `광업` | 지수 없음 |

🔴 **`제조`·`금융` 은 상위 묶음 지수**다(제조 1,526조 = 제조업 전부의 합). "시총 상위 10개
업종" 을 고를 때 이 둘을 넣으면 같은 종목을 두 번 센다 — `supply.sector.UMBRELLA_INDICES`
로 뺀다.

---

## 8. 🆕 KOSDAQ 을 받을 때 (선택 · v3.7)

받을지 말지는 **필요한 사람이 생길 때** 정한다. 지금(2026-09-06) 필요로 하는 곳이 없다 —
모델 파트 2안(업종 상위 10 → 업종별 시총 상위)은 KOSPI 만으로 되고, KOSPI200 트랙은 업종을
안 쓴다. 그래서 받지 않았다. 받기로 하면 아래대로 하면 되고, **코드는 이미 KOSDAQ 파일을
받는다** — 받기 전에 시험 7건으로 실측해 두었다(`tests/test_sector_kosdaq.py`).

### 8.1 무엇이 다른가 — 화면에서는 시장구분 하나

| | KOSPI | KOSDAQ |
|---|---|---|
| 화면 | 같은 화면 · 시장구분만 `KOSDAQ` | |
| 날짜 | 3절의 18개 | 🔴 **같은 18개** — 다른 날을 고르지 않는다 (8.3) |
| 파일 이름 | `업종분류현황_KOSPI_YYYYMMDD.csv` | `업종분류현황_KOSDAQ_YYYYMMDD.csv` (참고용 · 판정은 내용으로) |
| 저장 폴더 | `data/manual/sector/` | **같은 폴더** — 판별기가 종가로 시장을 갈라 변환본 이름에 시장을 넣는다 |
| 기대 행 수 | 900 안팎 | `daily_price` 실측(그날 KOSDAQ 종목 수 · 2026-09-06): **2010-01-04 1,036 · 2020-01-02 1,408 · 2024-01-02 1,704 · 2026-01-02 1,830**. KOSPI 는 같은 날 925 · 916 · 953 · 958 이라 화면 행 수가 이 수와 비슷하면 맞는 시장이다. 1,000 미만이면 KOSPI 를 받은 것 |
| 업종 체계 | 2024-07-01 개편 (새 업종 3) | 🔴 **32종 → 24종**으로 줄었다(반입 규격 `sector.json` 설명) — 개편 뒤 파일이 격리되지 않도록 `sector_nm` 에 enum 을 걸지 않았다 |
| 업종지수 조인 | `index_name_for()` 로 21종 조인 | **대조표가 없다** — `index_price` 의 KOSDAQ 업종지수(`index_class='KOSDAQ'`)와 이름을 맞추는 표는 아직 안 만들었다. 받는 사람이 생기면 그때 3시점 실측으로 만든다 |

### 8.2 코드가 KOSDAQ 을 어떻게 다루나 (실측 · 시험 7건)

| 층 | 무엇 | 시험 |
|---|---|---|
| 판별 `normalize_manual.infer_sector_date` | KOSDAQ 종가 30종을 `daily_price` 와 맞춰 기준일·시장을 되짚는다. 같은 날 KOSPI 파일과 KOSDAQ 파일은 **시장으로 갈린다** | `test_KOSDAQ_종가로_되짚어도_기준일과_시장이_맞는다` · `test_같은_날_KOSPI_파일과_KOSDAQ_파일은_시장으로_갈린다` |
| 변환본 `sector_text` | 화면 CSV 에 시장구분 칸이 없어도 `KOSDAQ` 을 앞에 붙인다. 이름은 `업종분류현황_KOSDAQ_20240102` | `test_시장구분_칸이_없는_KOSDAQ_파일에는_KOSDAQ_이_앞에_붙는다` · `test_변환본_이름은_시장을_품는다` |
| 반입 `sector.json` | `market` enum 에 `KOSDAQ` 이 있다. 기본키 `(bas_dd, code)` 는 시장이 달라도 코드가 다르니 겹치지 않는다 | (규격) |
| 공급 `industry_as_of` | 같은 날짜면 두 시장이 함께 나오고 `market="KOSDAQ"` 으로 가를 수 있다 | `test_두_시장이_같은_날짜로_들어오면_함께_나오고_market_으로_가른다` |
| 반출 `attach_industry` | 종목별 `merge_asof` 라 날짜가 어긋나도 둘 다 붙는다 | `test_attach_industry_는_종목별로_붙이므로_날짜가_어긋나도_둘_다_붙는다` |
| 검증 `verify_sector.py` | (날짜, 종목) 중복 · 종가·시총·**시장** 전량 대조는 그대로 돈다. 다만 §1 "가이드의 18개 날짜" 는 날짜만 보므로 KOSDAQ 이 같은 날짜면 통과하고, §3 업종 수 흐름은 두 시장 이름이 **합쳐져** 찍힌다 — 받으면 시장별로 나누도록 고친다 | — |

### 8.3 🔴 날짜를 다르게 받으면 생기는 일

`industry_as_of(bas_dd)` 는 *"`bas_dd` 이전 가장 최근 스냅샷 **하나**"* 를 통째로 준다(스냅샷 = 그날의 표).
KOSPI 를 01-02 에, KOSDAQ 을 01-03 에 받으면 01-05 기준 판정에서 **KOSPI 종목이 통째로 빠진다.**
`market=` 을 주면 각자 자기 최근 것을 주지만, 안 주는 호출이 하나라도 있으면 조용히 틀린다.
결함이 아니라 설계이고, 그래서 **같은 18개 날짜**로 받는다. 시험이 이 함정을 그대로 재현한다
(`test_날짜가_어긋나면_최근_스냅샷_하나만_나온다_그래서_같은_날짜로_받는다`).

### 8.4 받은 뒤

6절과 같다. `verify_sector.py` 출력에서 **스냅샷 장수가 36** 이고 시장이 다른 행이 0 인지 본다.
KOSDAQ 업종지수 대조표는 받은 뒤 3시점(2010·2020·2026) 실측으로 `supply/sector.py` 에 더한다.
